--- a/hzhaoc-f(x)/.obsidian/app.json
+++ b/hzhaoc-f(x)/.obsidian/app.json
@@ -383,7 +383,8 @@
     "Amongst",
     "Pseudocode",
     "Isoefficiency",
-    "Rematerialization"
+    "Fenwick",
+    "splitters"
   ],
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "_img",
