--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -1,17 +1,14 @@
 {
   "main": {
-    "id": "d646a5a9c7942c1a",
+    "id": "bd0716aa3048c354",
     "type": "split",
     "children": [
       {
-        "id": "2b84d48a9f76765a",
+        "id": "189e96edfa060d83",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Computer Science/Embedded Systems & Compilers/Compiler - Overview.md",
-            "mode": "preview"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -39,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "CISC",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -52,7 +49,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 308
+    "width": 354
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Computer Science/Embedded Systems & Compilers/Compiler - Overview.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +82,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "2b84d48a9f76765a",
+  "active": "189e96edfa060d83",
   "lastOpenFiles": [
+    "Computer Science/Super Computing Algorithms/Distributed BFS.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Parallel LD & ST.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Network Processor.md",
     "Computer Science/Embedded Systems & Compilers/Compiler - Overview.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Storage Assginment.md",
     "Computer Science/Embedded Systems & Compilers/_Index/Embedded Systems & Compilers.md",
-    "Computer Science/Embedded Systems & Compilers/Embed Sys - Datapath.md",
     "Computer Science/Embedded Systems & Compilers/Embed Sys - Inst Encoding.md",
     "Computer Science/Embedded Systems & Compilers/Embed Sys - Compiler Overview.md",
     "Computer Science/Embedded Systems & Compilers/Embed Sys - Branch, Speculation, Predication.md",
-    "Computer Science/Computer Architecture/Bg, Trend, Cost, Power, Energy, Perform.md",
-    "Computer Science/Scalable Computing Algorithms/Dist. Mem - MPI.md",
-    "Computer Science/Scalable Computing Algorithms/Dist. Mem - Network Topology.md",
-    "Computer Science/Scalable Computing Algorithms/Work-Span Model.md"
+    "Computer Science/Embedded Systems & Compilers/Embed Sys - Reg & Mem.md"
   ]
 }
