--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -7,8 +7,11 @@
         "id": "189e96edfa060d83",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Computer Science/Scalable Computing Algorithms/Dist. Mem - Network Topology.md",
+            "mode": "preview"
+          }
         }
       }
     ],
@@ -36,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "ring",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -65,6 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Computer Science/Scalable Computing Algorithms/Dist. Mem - Network Topology.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -84,15 +88,15 @@
   },
   "active": "189e96edfa060d83",
   "lastOpenFiles": [
+    "Computer Science/Scalable Computing Algorithms/Dist. Mem - Network Topology.md",
+    "Computer Science/Scalable Computing Algorithms/_Index/Scalable Computing Algorithms.md",
+    "Computer Science/Scalable Computing Algorithms/Dist. Mem - MPI.md",
+    "Computer Science/Scalable Computing Algorithms/Dist. Mem - Dense Matrix Multiply.md",
+    "Computer Science/Scalable Computing Algorithms/Dist. Mem - BFS.md",
+    "Computer Science/Scalable Computing Algorithms/Two-level Mem Model.md",
+    "Computer Science/Scalable Computing Algorithms/Dist. Mem - Sorting.md",
+    "Computer Science/Scalable Computing Algorithms/CUDA Parallelism.md",
     "Computer Science/Super Computing Algorithms/Distributed BFS.md",
-    "Computer Science/Embedded Systems & Compilers/Compiler - Parallel LD & ST.md",
-    "Computer Science/Embedded Systems & Compilers/Compiler - Network Processor.md",
-    "Computer Science/Embedded Systems & Compilers/Compiler - Overview.md",
-    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Storage Assginment.md",
-    "Computer Science/Embedded Systems & Compilers/_Index/Embedded Systems & Compilers.md",
-    "Computer Science/Embedded Systems & Compilers/Embed Sys - Inst Encoding.md",
-    "Computer Science/Embedded Systems & Compilers/Embed Sys - Compiler Overview.md",
-    "Computer Science/Embedded Systems & Compilers/Embed Sys - Branch, Speculation, Predication.md",
-    "Computer Science/Embedded Systems & Compilers/Embed Sys - Reg & Mem.md"
+    "Computer Science/Embedded Systems & Compilers/Compiler - Parallel LD & ST.md"
   ]
 }
