--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ hzhaoc-f(x)/.obsidian/workspace
 *.json
 hzhaoc-f(x)/.obsidian/workspace
 hzhaoc-f(x)/.obsidian/workspace
+hzhaoc-f(x)/.obsidian/workspace
