--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ hzhaoc-f(x)/.obsidian/workspace
 hzhaoc-f(x)/.obsidian/workspace
 hzhaoc-f(x)/.obsidian/workspace
 hzhaoc-f(x)/.obsidian/workspace
+hzhaoc-f(x)/.obsidian/workspace
+*.json
