--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ hzhaoc-f(x)/.obsidian/workspace
 hzhaoc-f(x)/.obsidian/workspace
 hzhaoc-f(x)/.obsidian/workspace
 *.json
+hzhaoc-f(x)/.obsidian/workspace
