--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Computer Science/Computer Network/Application & Transport Layers.md",
-            "mode": "source",
+            "file": "Computer Science/Computer Network/_Index/Computer Network.md",
+            "mode": "preview",
             "source": false
           }
         }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Computer Science/Computer Network/Application & Transport Layers.md",
+                "file": "Computer Science/Computer Network/_Index/Computer Network.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +89,8 @@
   },
   "active": "189e96edfa060d83",
   "lastOpenFiles": [
+    "Computer Science/Computer Network/_Index/Computer Network.md",
+    "Computer Science/Computer Network/Web Security/_Index/Web Security.md",
     "Computer Science/Computer Network/Application & Transport Layers.md",
     "Computer Science/Computer Network/Overview.md",
     "Computer Science/Computer Network/Network Protocol.md",
@@ -96,8 +98,6 @@
     "Computer Science/Algorithm/Graph Search/_Index/Graph Search.md",
     "Computer Science/Algorithm/Graph Search/Shortest Path.md",
     "Computer Science/Data Structure/Bloom Filter.md",
-    "Computer Science/Data Structure/Tree/Binary Tree/Heap.md",
-    "Computer Science/Data Structure/Basic.md",
-    "Computer Science/Algorithm/Graph Search/SCC.md"
+    "Computer Science/Data Structure/Tree/Binary Tree/Heap.md"
   ]
 }
