--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ hzhaoc-f(x)/.obsidian/workspace
 hzhaoc-f(x)/.obsidian/workspace
 hzhaoc-f(x)/.obsidian/workspace
 *.json
+hzhaoc-f(x)/.obsidian/workspace
+hzhaoc-f(x)/.obsidian/app.json
+hzhaoc-f(x)/.obsidian/appearance.json
