--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -10,7 +10,8 @@
           "type": "markdown",
           "state": {
             "file": "Computer Science/Operating System/DFS.md",
-            "mode": "preview"
+            "mode": "preview",
+            "source": false
           }
         }
       }
