--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Computer Science/Computer Network/_Index/Computer Network.md",1
+            "file": "Computer Science/Computer Network/Application & Transport Layers.md",
             "mode": "preview",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "minimum cuts",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 318
+    "width": 275
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Computer Science/Computer Network/_Index/Computer Network.md",
+                "file": "Computer Science/Computer Network/Application & Transport Layers.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "189e96edfa060d83",
   "lastOpenFiles": [
-    "Computer Science/Computer Network/_Index/Computer Network.md",
-    "Computer Science/Computer Network/Web Security/_Index/Web Security.md",
     "Computer Science/Computer Network/Application & Transport Layers.md",
     "Computer Science/Computer Network/Overview.md",
-    "Computer Science/Computer Network/Network Protocol.md",
-    "Computer Science/Algorithm/Graph Search/Minimum Cuts.md",
-    "Computer Science/Algorithm/Graph Search/_Index/Graph Search.md",
-    "Computer Science/Algorithm/Graph Search/Shortest Path.md",
-    "Computer Science/Data Structure/Bloom Filter.md",
-    "Computer Science/Data Structure/Tree/Binary Tree/Heap.md"
+    "Computer Science/Computer Network/Web Security/_Index/Web Security.md",
+    "Computer Science/Algorithm/Graph/Shortest Path.md",
+    "Computer Science/Algorithm/Graph/_Index/Graph.md",
+    "Computer Science/Algorithm/_Index/Algorithm.md",
+    "Computer Science/Operating System/DFS.md",
+    "Computer Science/Operating System/I, O.md",
+    "Computer Science/Operating System/IPC.md",
+    "Computer Science/Operating System/Linux.md"
   ]
 }
