--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Computer Science/Computer Network/_Index/Computer Network.md",
-            "mode": "preview",
+            "file": "Mathematics/Number Theory/Modular Arithmetic.md",
+            "mode": "source",
             "source": false
           }
         }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "minimum cuts",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 275
+    "width": 318
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Computer Science/Computer Network/_Index/Computer Network.md",
+                "file": "Mathematics/Number Theory/Modular Arithmetic.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "189e96edfa060d83",
   "lastOpenFiles": [
-    "Computer Science/Computer Network/_Index/Computer Network.md",
+    "Mathematics/Number Theory/Modular Arithmetic.md",
+    "Mathematics/Number Theory/Lemmas.md",
+    "Mathematics/Number Theory/Index/Number Thoery.md",
+    "Mathematics/_Index/Mathematics.md",
     "Computer Science/Web Security/_Index/Web Security.md",
+    "Computer Science/Computer Network/_Index/Computer Network.md",
     "Computer Science/Computer Network/Web Security/_Index/Web Security.md",
-    "Computer Science/Computer Network/Overview.md",
     "Computer Science/Computer Network/Application & Transport Layers.md",
-    "Computer Science/Algorithm/Graph/Shortest Path.md",
-    "Computer Science/Algorithm/Graph/_Index/Graph.md",
-    "Computer Science/Algorithm/_Index/Algorithm.md",
-    "Computer Science/Operating System/DFS.md",
-    "Computer Science/Operating System/I, O.md"
+    "Computer Science/Computer Network/Overview.md",
+    "Computer Science/Computer Network/Network Protocol.md"
   ]
 }
