--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Computer Science/Algorithm/Max-Flow.md",
+            "file": "Computer Science/Algorithm/NP Complete.md",
             "mode": "preview",
             "source": false
           }
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 276
+    "width": 198
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Computer Science/Algorithm/Max-Flow.md",
+                "file": "Computer Science/Algorithm/NP Complete.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "e64c5763c43016ce",
   "lastOpenFiles": [
+    "Computer Science/Algorithm/NP Complete.md",
     "Computer Science/Algorithm/Max-Flow.md",
-    "Computer Science/Algorithm/Greedy/MST.md",
+    "Computer Science/Algorithm/Linear Programming.md",
+    "Computer Science/Algorithm/Master Theorem.md",
+    "Computer Science/Algorithm/RSA.md",
+    "Computer Science/Algorithm/Local Search.md",
+    "Computer Science/Algorithm/_Index/Algorithm.md",
     "Computer Science/Algorithm/Graph/Shortest Path.md",
-    "Mathematics/Number Theory/Modular Arithmetic.md",
-    "Mathematics/Number Theory/Lemmas.md",
-    "Computer Science/Algorithm/Cheatsheet.md",
-    "Computer Science/Algorithm/Graph/SCC.md",
-    "Computer Science/Algorithm/Graph/Minimum Cuts.md",
-    "Computer Science/Data Structure/Hashing.md",
-    "Computer Science/Data Structure/Disjoint Set.md"
+    "Computer Science/Cloud computing/Spark.md",
+    "Computer Science/Cloud computing/Hadoop.md"
   ]
 }
