--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Computer Science/Algorithm/NP Complete.md",
+            "file": "Physics/Quantum Mechanics/量子纠缠.md",
             "mode": "preview",
             "source": false
           }
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 198
+    "width": 234
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Computer Science/Algorithm/NP Complete.md",
+                "file": "Physics/Quantum Mechanics/量子纠缠.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "e64c5763c43016ce",
   "lastOpenFiles": [
-    "Computer Science/Algorithm/NP Complete.md",
-    "Computer Science/Algorithm/Max-Flow.md",
-    "Computer Science/Algorithm/Linear Programming.md",
-    "Computer Science/Algorithm/Master Theorem.md",
+    "Physics/Quantum Mechanics/量子纠缠.md",
+    "().md",
+    "Physics/Quantum Mechanics/不确定原理.md",
+    "Physics/Quantum Mechanics/_Index/Quantum Mechanics.md",
+    "Physics/Mechanics/力矩，角动量.md",
+    "Physics/Mechanics/_Index/Mechanics.md",
+    "Physics/_Index/Physics.md",
     "Computer Science/Algorithm/RSA.md",
-    "Computer Science/Algorithm/Local Search.md",
-    "Computer Science/Algorithm/_Index/Algorithm.md",
-    "Computer Science/Algorithm/Graph/Shortest Path.md",
-    "Computer Science/Cloud computing/Spark.md",
-    "Computer Science/Cloud computing/Hadoop.md"
+    "Computer Science/Algorithm/NP Complete.md",
+    "Computer Science/Algorithm/Linear Programming.md"
   ]
 }
