--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Physics/Energy Physics/Future Energy Storage.md",
-            "mode": "preview",
+            "file": "Physics/Quantum Mechanics/电磁相互作用.md",
+            "mode": "source",
             "source": false
           }
         }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "entropy",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 277
+    "width": 224
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Physics/Energy Physics/Future Energy Storage.md",
+                "file": "Physics/Quantum Mechanics/电磁相互作用.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "e64c5763c43016ce",
   "lastOpenFiles": [
-    "Physics/Energy Physics/Future Energy Storage.md",
+    "Physics/Quantum Mechanics/电磁相互作用.md",
+    "Physics/Quantum Mechanics/核聚变.md",
+    "Physics/Quantum Mechanics/核裂变.md",
+    "Physics/Quantum Mechanics/_Index/Quantum Mechanics.md",
+    "Physics/Quantum Mechanics/基本粒子.md",
+    "Physics/Quantum Mechanics/引力相互作用.md",
+    "Physics/Quantum Mechanics/强相互作用.md",
+    "Physics/Quantum Mechanics/弱相互作用.md",
     "Physics/Quantum Mechanics/量子纠缠.md",
-    "Physics/Energy Physics/可控核聚变.md",
-    "Physics/Mechanics/力矩，角动量.md",
-    "Physics/Quantum Mechanics/不确定原理.md",
-    "Physics/Mechanics/_Index/Mechanics.md",
-    "Physics/Energy Physics/_Index/Energy Physics.md",
-    "Computer Science/Operating System/Task Scheduler.md",
-    "Computer Science/Scalable Computing Algorithms/Dist. Mem - Sorting.md",
-    "Computer Science/Scalable Computing Algorithms/CUDA Parallelism.md"
+    "Physics/Quantum Mechanics/不确定原理.md"
   ]
 }
