--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "bccd7fa0ece66f18",
+        "id": "e64c5763c43016ce",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Informatics/碳纳米管.md",
-            "mode": "preview",
+            "file": "Electrical Engineering/无线供电.md",
+            "mode": "source",
             "source": false
           }
         }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "entropy",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 224
+    "width": 369
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Informatics/碳纳米管.md",
+                "file": "Electrical Engineering/无线供电.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "bccd7fa0ece66f18",
+  "active": "e64c5763c43016ce",
   "lastOpenFiles": [
-    "Informatics/碳纳米管.md",
-    "Informatics/_Index/Informatics.md",
-    "Physics/Energy Physics/_Index/Energy Physics.md",
-    "Physics/化学/_Index/化学.md",
-    "Physics/化学/原子轨道.md",
-    "Physics/化学/分子轨道.md",
-    "Physics/Energy Physics/可控核聚变.md",
-    "Physics/Energy Physics/能源存储.md",
-    "Physics/Quantum Mechanics/核聚变.md",
-    "Physics/Quantum Mechanics/电磁相互作用.md"
+    "Electrical Engineering/无线供电.md",
+    "Electrical Engineering/半导体与晶体管.md",
+    "Computer Science/Computer Architecture/_Index/Computer Architecture.md",
+    "Electrical Engineering/光罩.md",
+    "Electrical Engineering/_Index/Electrical Engineering.md",
+    "晶体管.md",
+    "Electrical Engineering/晶体管.md",
+    "Physics/Quantum Mechanics/结合能.md",
+    "Physics/Electromagnetism/载流子.md",
+    "Electrical Engineering/MOSFET.md"
   ]
 }
