--- a/hzhaoc-f(x)/.obsidian/workspace
+++ b/hzhaoc-f(x)/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "e64c5763c43016ce",
+        "id": "4c3598b2d43fefd5",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Physics/能源、 材料、未来/_Index/能源、材料、未来.md",
+            "file": "Computer Science/Embedded Systems & Compilers/Compiler - Overview.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "PN结",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 369
+    "width": 357.5
   },
   "right": {
     "id": "1dcb0317d36a7fb8",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Physics/能源、 材料、未来/_Index/能源、材料、未来.md",
+                "file": "Computer Science/Embedded Systems & Compilers/Compiler - Overview.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "e64c5763c43016ce",
+  "active": "4c3598b2d43fefd5",
   "lastOpenFiles": [
-    "Physics/能源、 材料、未来/_Index/能源、材料、未来.md",
-    "Physics/能源、 材料、未来/光电.md",
-    "Electrical Engineering/半导体与晶体管.md",
-    "Electrical Engineering/电动势.md",
-    "Electrical Engineering/洛伦兹力.md",
-    "Electrical Engineering/无线供电.md",
-    "Electrical Engineering/光罩.md",
-    "Physics/Quantum Mechanics/不确定原理.md",
-    "Physics/Quantum Mechanics/基本粒子.md",
-    "Physics/Quantum Mechanics/引力相互作用.md"
+    "Computer Science/Embedded Systems & Compilers/Compiler - Network Processor.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Storage Assginment.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Reg Encoding.md",
+    "Computer Science/Embedded Systems & Compilers/Compiler - Backend - Reg Alloc.md",
+    "Computer Science/Embedded Systems & Compilers/Embed Sys - Reg & Mem.md",
+    "Computer Science/Embedded Systems & Compilers/Embed Sys - Inst Encoding.md",
+    "Computer Science/Embedded Systems & Compilers/Embed Sys - Datapath.md",
+    "Computer Science/Embedded Systems & Compilers/Embed Sys - Compiler Overview.md",
+    "Computer Science/Embedded Systems & Compilers/Embed Sys - Branch, Speculation, Predication.md",
+    "Compiler - Intermediary - CFG.md"
   ]
 }
